--- a/store/config.json
+++ b/store/config.json
@@ -31,5 +31,6 @@
 	{ "name": "glavred", "discussion": "274" },
 	{ "name": "termef", "discussion": "295" },
 	{ "name": "pixabay", "discussion": "325" },
-	{ "name": "insertQR", "discussion": "" }
+	{ "name": "insertQR", "discussion": "" },
+	{ "name": "helloworld", "discussion": "" }
 ]
