--- a/sdkjs-plugins/content/helloworld/config.json
+++ b/sdkjs-plugins/content/helloworld/config.json
@@ -17,5 +17,24 @@
             "isUpdateOleOnResize" : true,
             "buttons"             : []
         }
-    ]
+    ],
+    "store": {
+				"background": {
+					"light": "radial-gradient(circle, #B5BCC3 0%, #737D87 100%)",
+					"dark": "radial-gradient(circle, #B5BCC3 0%, #737D87 100%)"
+				},
+				"screenshots": [
+					"resources/store/screenshots/screenshot.png",
+					"resources/store/screenshots/screenshot1.png",
+					"resources/store/screenshots/screenshot2.png",
+					"resources/store/screenshots/screenshot3.png",
+					"resources/store/screenshots/screenshot4.png",
+					"resources/store/screenshots/screenshot5.png"
+				],
+				"icons": {
+					"light": "resources/store/icons",
+					"dark": "resources/store/icons"
+				},
+				"categories": ["specAbilities", "work"]
+			}
 }
