--- a/sdkjs-plugins/content/helloworld/config.json
+++ b/sdkjs-plugins/content/helloworld/config.json
@@ -15,7 +15,8 @@
             "initDataType"        : "none",
             "initData"            : "",
             "isUpdateOleOnResize" : true,
-            "buttons"             : []
+            "buttons"             : [],
+            "events"              : ["onToolbarMenuClick"]
         }
     ],
     "store": {
