modified hello world plugin and changed it to plugin as tab

--- a/store/config.json
+++ b/store/config.json
@@ -32,5 +32,5 @@
 	{ "name": "termef", "discussion": "295" },
 	{ "name": "pixabay", "discussion": "325" },
 	{ "name": "insertQR", "discussion": "" },
-	{ "name": "helloworld", "discussion": "" }
+	{ "name": "pluginastab", "discussion": "" }
 ]
